fix: intro alignement

--- a/src/containers/home/components/social/social.css
+++ b/src/containers/home/components/social/social.css
@@ -1,7 +1,7 @@
 .a-social {
   position: fixed;
   bottom: 12px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
